Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99036

[REG 5.15 → 6.3] QList(It, It) no longer works with pure input_iterators

XMLWordPrintable

    • 48b75def5d (qt/qtbase/dev) 48b75def5d (qt/tqtc-qtbase/dev) b05c9898cc (qt/qtbase/6.2) b05c9898cc (qt/tqtc-qtbase/6.2) 48b75def5d (qt/tqtc-qtbase/6.3)

      In Qt 5.15, the following code works:

          std::stringstream ss;
          ~~~~
          const Container c5(std::istream_iterator<V>{ss},
                             std::istream_iterator<V>{});
      

      (with Container = QList<int> and V == int) whereas in Qt 6, it fails to find a matching QArrayOps::appendIteratorRange() because sure enough that's SFINAE'd out for input_iterators.

        For Gerrit Dashboard: QTBUG-99036
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            mmutz Marc Mutz
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: